argocd/apps/longhorn/config/longhorn-auth-Middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-auth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Set-Cookie
    authRequestHeaders:
      - Cookie
