argocd/apps/longhorn/config/oauth2-proxy-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: longhorn-system
spec:
  type: ExternalName
  externalName: oauth2-proxy.oauth2-proxy.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
