argocd/apps/longhorn/config/longhorn-ui-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-longhorn
  hostnames:
    - longhorn.nss.jkzl.eu
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: longhorn-auth
      backendRefs:
        - name: longhorn-frontend
          port: 80
