argocd/apps/longhorn/config/longhorn-ui-IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.nss.jkzl.eu`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
    - match: Host(`longhorn.nss.jkzl.eu`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: longhorn-auth-errors
        - name: longhorn-auth
  tls:
    secretName: ass-nss-longhorn-tls
